--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "moment-timezone": "latest",
     "request": "latest",
     "xml2js": "latest",
-    "dateformat": "latest"
+    "dateformat": "latest",
+    "body-parser": "latest"
   },
   "scripts": {
     "start": "node app.js"
